--- a/src/__404.html
+++ b/src/__404.html
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": ""
+					"mainNavItemActive": "404"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
