--- a/src/__blog.html
+++ b/src/__blog.html
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": "blog"
+					"mainNavItemActive": "Блог"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
