--- a/src/__index.html
+++ b/src/__index.html
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": "index"
+					"mainNavItemActive": "Главная"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
@@ -27,13 +27,28 @@
 									</div>
 									<div class="swiper-container slider-quoter-js">
 										<div class="swiper-wrapper">
-											@@for (var i = 1; i < 5; i++) {
-											<div class="swiper-slide">
-												<div class="swiper-slide__inner">
-													<h3>0`+i+` Книга – это настроение, и пусть оно как можно чаще будет положительным!</h3>
-													<p>«При всём многообразии сегодняшнего выбора я уверен, что книга – это глубоко индивидуальное явление. Ведь мы читаем для души, а у каждого она своя, по-своему болит, по-своему радуется, и поэтому лекарство для нее каждый из нас должен выбирать сам!»</p>
-												</div>
-											</div>
+											@@loop('_text-slider.tpl', [
+											{
+											"slideClass": "",
+											"slideTitle": "Книга – это настроение, и пусть оно как можно чаще будет положительным!",
+											"slideText": "«При всём многообразии сегодняшнего выбора я уверен, что книга – это глубоко индивидуальное явление. Ведь мы читаем для души, а у каждого она своя, по-своему болит, по-своему радуется, и поэтому лекарство для нее каждый из нас должен выбирать сам!»"
+											},{
+											"slideClass": "",
+											"slideTitle": "Общее собрание членов Библиотечной ассамблеи",
+											"slideText": "ХVIII Общее собрание членов Библиотечной ассамблеи Евразии в рамках IV Санкт-Петербургского международного культурного форума. 15 декабря 2015 г. Российская национальная библиотека, Санкт-Петербург"
+											},{
+											"slideClass": "",
+											"slideTitle": "wwwwwww",
+											"slideText": "zzzz"
+											},{
+											"slideClass": "",
+											"slideTitle": "действительный член Международной академии информатизации при ООН, доктор пед. наук, профессор",
+											"slideText": "Официальные оппоненты соискателя: М.Я. Дворкина, действительный член Международной академии информатизации при ООН, доктор пед. наук, профессор (слева); Н.Н. Кушнаренко, доктор пед. наук, декан факультета библиотековедения и информатики, зав. кафедрой книговедения и фондоведения (документоведения) Харьковской гос. академии культуры (справа)"
+											},{
+											"slideClass": "",
+											"slideTitle": "Из прошлого в будущее. Библиотеки Беларуси.",
+											"slideText": "Диплом доктора пед. наук вручает Президент Республики Беларусь А.Г. Лукашенко. 22 января 2004 г. Минск. Презентация монографии «Из прошлого в будущее. Библиотеки Беларуси. Часть I.». 25 августа 2011 г. Минск"
+											}])
 											}
 										</div>
 									</div>
