--- a/src/__message.html
+++ b/src/__message.html
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": "message"
+					"mainNavItemActive": "Сообщение"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
