--- a/src/__photos.html
+++ b/src/__photos.html
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": "photos"
+					"mainNavItemActive": "Фотоальбом"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
@@ -72,11 +72,44 @@
 									<div class="gallery__captions">
 										<div class="swiper-container gallery-captions-js">
 											<div class="swiper-wrapper">
-												@@for (var i = 1; i < 10; i++) {
-												<div class="gallery__caption swiper-slide">
-													<p>0`+ i +` Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского государственного университета культуры и искусств.</p>
-												</div>
-												}
+												@@loop('_text-slider.tpl', [
+												{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Защита докторской диссертации на тему «Библиотека как социальный институт: теоретико-методологический аспект». 30 января 2003 г. Белорусский государственный университет культуры и искусств (БГУКИ). Минск."
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Научный консультант Ю. Н. Столяров, президент отделения Библиотековедения Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского государственного университета культуры и искусств."
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "ХVIII Общее собрание членов Библиотечной ассамблеи Евразии в рамках IV Санкт-Петербургского международного культурного форума. 15 декабря 2015 г. Российская национальная библиотека, Санкт-Петербург"
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Презентация монографии «Из прошлого в будущее. Библиотеки Беларуси. Часть I.». 25 августа 2011 г. Минск"
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Научный консультант Ю.Н. Столяров, президент отделения «Библиотековедение» Международной академии информатизации при ООН, доктор пед. наук, профессор, зав. кафедрой документных ресурсов и документационного обеспечения управления Московского государственного университета культуры и искусств (МГУКИ)"
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Официальные оппоненты соискателя: М.Я. Дворкина, действительный член Международной академии информатизации при ООН, доктор пед. наук, профессор (слева); Н.Н. Кушнаренко, доктор пед. наук, декан факультета библиотековедения и информатики, зав. кафедрой книговедения и фондоведения (документоведения) Харьковской гос. академии культуры (справа)"
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Выступает ученый секретарь совета по защите диссертаций кандидат пед. наук, доцент Л.И. Козловская"
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Диплом доктора пед. наук вручает Президент Республики Беларусь А.Г. Лукашенко. 22 января 2004 г. Минск"
+												},{
+												"slideClass": "gallery__caption",
+												"slideTitle": "",
+												"slideText": "Презентация монографии «Из прошлого в будущее. Библиотеки Беларуси. Часть I.». 25 августа 2011 г. Минск"
+												}])
 											</div>
 										</div>
 									</div>
