--- a/src/__biography.html
+++ b/src/__biography.html
@@ -9,7 +9,7 @@
 			<div class="cross">
 				<!--HEADER-->
 				@@include('_header.tpl', {
-					"mainNavItemActive": "biography"
+					"mainNavItemActive": "Биография"
 				})
 				<!--HEADER end-->
 				<!--MAIN-->
